--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_sign_in: ^5.0.0
+  firebase_auth: ^1.0.0
+  firebase_core:
+  provider: ^5.0.0
   auth_buttons: ^0.0.6
 
 dev_dependencies:
