--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.0.0
   firebase_auth: ^1.0.0
+  email_validator: ^1.0.6
   firebase_core:
   provider: ^5.0.0
   auth_buttons: ^0.0.6
