--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_sign_in: ^5.0.0
-  firebase_auth: ^1.0.0
+  google_sign_in: ^4.5.6
+  firebase_auth: ^0.18.4
   email_validator: ^1.0.6
-  firebase_core:
+  cloud_firestore: ^0.14.4
   provider: ^5.0.0
   auth_buttons: ^0.0.6
 
