--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_sign_in: ^4.5.6
-  firebase_auth: ^0.18.4
-  email_validator: ^1.0.6
-  cloud_firestore: ^0.14.4
-  provider: ^5.0.0
   auth_buttons: ^0.0.6
+  firebase_auth: ^0.18.4
+  cloud_firestore: ^0.14.4
+  google_sign_in: ^4.5.6
+  email_validator: ^1.0.6
+  provider: ^5.0.0
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
