--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   email_validator: ^1.0.6
   provider: ^5.0.0
   splashscreen: ^1.3.5
+  flutter_launcher_icons: ^0.9.0
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/logo.png"
 
 dev_dependencies:
   flutter_test:
